--- a/Портфолио.html
+++ b/Портфолио.html
@@ -185,16 +185,16 @@
         <p class="connection"><b>Присоединяйтесь</b></p>
         <ul>
           <li>
-            <a href="link" aria-label="Instagram">Instagram</a>
+            <a href="" class="link" aria-label="Instagram">Instagram</a>
           </li>
           <li>
-            <a href="link" aria-label="Twitter">Twitter</a>
+            <a href="" class="link" aria-label="Twitter">Twitter</a>
           </li>
           <li>
-            <a href="link" aria-label="Facebook">Facebook</a>
+            <a href="" class="link" aria-label="Facebook">Facebook</a>
           </li>
           <li>
-            <a href="link" aria-label="Linkedin">Linkedin</a>
+            <a href="" class="link" aria-label="Linkedin">Linkedin</a>
           </li>
         </ul>
         <p class="connection"><b>Подписаться на рассылку</b></p>
