--- a/Портфолио.html
+++ b/Портфолио.html
@@ -47,7 +47,7 @@
         <button class="button-portfolio" type="button">Маркетинг</button>
         <ul>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/tehnokryak.jpg" alt="Технокряк" />
               <h2 class="name">Технокряк</h2>
               <p class="title">Веб-сайт</p>
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/poster-new.jpg"
                 alt="Постер New Orlean vs Golden Stars"
@@ -74,7 +74,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/restoran.jpg" alt="Ресторан Seafood" />
               <h2 class="name">Ресторан Seafood</h2>
               <p class="title">Приложение</p>
@@ -86,7 +86,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/proect.jpg" alt="Проект Prime" />
               <h2 class="name">Проект Prime</h2>
               <p class="title">Маркетинг</p>
@@ -98,7 +98,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/proect-boxes.jpg" alt="Проект Boxes" />
               <h2 class="name">Проект Boxes</h2>
               <p class="title">Приложение</p>
@@ -110,7 +110,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/inspiration.jpg"
                 alt="Inspiration has no Borders"
@@ -125,7 +125,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/limited-edition.jpg"
                 alt="Издание Limited Edition"
@@ -140,7 +140,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img src="./images/lab-tag.jpg" alt="Проект LAB" />
               <h2 class="name">Проект LAB</h2>
               <p class="title">Маркетинг</p>
@@ -152,7 +152,7 @@
             >
           </li>
           <li class="project">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/groving-business.jpg"
                 alt="Growing Business"
