змінила колір фону у футері+підкреслення у логотипі

--- a/Портфолио.html
+++ b/Портфолио.html
@@ -181,7 +181,7 @@
         <p class="contacts">+38 099 111 11 11</p>
         <br />
       </div>
-      <div>
+      <div class="footer">
         <p class="connection"><b>Присоединяйтесь</b></p>
         <ul>
           <li>
@@ -199,7 +199,7 @@
         </ul>
         <p class="connection"><b>Подписаться на рассылку</b></p>
       </div>
-      <div>
+      <div class="footer">
         <p class="company">2020 &mid; Developed by GoIT Students</p>
       </div>
     </footer>
