--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <p class="contacts">+38 099 111 11 11</p>
         <br />
       </div>
-      <div>
+      <div class="footer">
         <p class="connection"><b>Присоединяйтесь</b></p>
         <ul>
           <li>
@@ -251,7 +251,7 @@
         </ul>
         <p class="connection"><b>Подписаться на рассылку</b></p>
       </div>
-      <div>
+      <div class="footer">
         <p class="company">2020 &mid; Developed by GoIT Students</p>
       </div>
     </footer>
