задала колір футера

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div class="footer">
+    <footer class="footer">
+      <div>
         <a href="index.html" class="logo">
           <span class="logo-accent">Web</span>Studio
         </a>
@@ -233,7 +233,7 @@
         <p class="contacts">+38 099 111 11 11</p>
         <br />
       </div>
-      <div class="footer">
+      <div>
         <p class="connection"><b>Присоединяйтесь</b></p>
         <ul>
           <li>
@@ -251,7 +251,7 @@
         </ul>
         <p class="connection"><b>Подписаться на рассылку</b></p>
       </div>
-      <div class="footer">
+      <div>
         <p class="company">2020 &mid; Developed by GoIT Students</p>
       </div>
     </footer>
