--- a/Портфолио.html
+++ b/Портфолио.html
@@ -169,8 +169,8 @@
         </ul>
       </div>
     </main>
-    <footer>
-      <div class="footer">
+    <footer class="footer">
+      <div>
         <a href="index.html" class="logo">
           <span class="logo-accent">Web</span>Studio
         </a>
@@ -181,7 +181,7 @@
         <p class="contacts">+38 099 111 11 11</p>
         <br />
       </div>
-      <div class="footer">
+      <div>
         <p class="connection"><b>Присоединяйтесь</b></p>
         <ul>
           <li>
@@ -199,7 +199,7 @@
         </ul>
         <p class="connection"><b>Подписаться на рассылку</b></p>
       </div>
-      <div class="footer">
+      <div>
         <p class="company">2020 &mid; Developed by GoIT Students</p>
       </div>
     </footer>
